fixing hero text alignments

--- a/less/header-bgs.less
+++ b/less/header-bgs.less
@@ -1,45 +1,45 @@
 #the-hague .hero-image .bg-image {
   background-image: url('../cities/the-hague/phone/DSC_0061.jpg');
   background-position: center center;
-}
-#the-hague .hero-image .bg-image .hero-text {
-  padding: 50px 30px 0 30px;
-}
-@media screen and (min-width: 360px) {
-  #the-hague .hero-image .bg-image .hero-text {
-    padding-top: 80px;
+
+  .hero-text {
+    padding: 50px 30px 0 30px;
+
+    @media screen and (min-width: 360px) {
+      padding-top: 80px;
+    }
   }
-}
-@media screen and (min-width: 670px) {
-  #the-hague .hero-image .bg-image {
+
+  @media screen and (min-width: 670px) {
     background-image: url('../cities/the-hague/tablet/DSC_0061.jpg');
+
+    .hero-text {
+      padding-top: 380px;
+    }
   }
-  #the-hague .hero-image .bg-image .hero-text {
-    padding-top: 380px;
-  }
-}
-@media screen and (min-width: 810px) {
-  #the-hague .hero-image .bg-image {
+  @media screen and (min-width: 810px) {
     background-image: url('../cities/the-hague/laptop/DSC_0061.jpg');
+
+    .hero-text {
+      padding-top: 410px;
+    }
   }
-  #the-hague .hero-image .bg-image .hero-text {
-    padding-top: 410px;
-  }
-}
-@media screen and (min-width: 1230px) {
-  #the-hague .hero-image .bg-image {
+  @media screen and (min-width: 1230px) {
     background-image: url('../cities/the-hague/desktop/DSC_0061.jpg');
-  }
-  #the-hague .hero-image .bg-image .hero-text {
-    padding-top: 410px;
+
+    .hero-text {
+      padding-top: 410px;
+    }
   }
 }
+
 #home-page .hero-image .bg-image {
   background-image: url('../about/IMG_2399.jpg');
 }
 #about .hero-image .bg-image {
   background-image: url('../about/IMG_2415.jpg');
 }
+
 #guadalupe .hero-image .bg-image {
   background-image: url('../cities/guadalupe/DSC_0304.jpg');
   background-position: center bottom;
